Refactor in ConstructionPlanParserTest.java